--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
 	"image": "mcr.microsoft.com/devcontainers/universal:2",
 	"features": {
 		"ghcr.io/devcontainers-contrib/features/protoc-asdf:1": {},
-		"ghcr.io/marcozac/devcontainer-features/protoc-gen-entgrpc:1": {}
+		"ghcr.io/marcozac/devcontainer-features/protoc-gen-entgrpc:1": {},
+		"ghcr.io/devcontainers-contrib/features/protoc:1": {}
 	}
 }
