--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,5 @@
 services:
+    # Add stratos-auth service for development environment
     stratos-auth:
         build:
             context: ./StratosAuth
@@ -6,6 +7,6 @@ services:
         env_file:
             - ./StratosAuth/.env.dev
         volumes:
-            - ./StratosAuth:/app
+            - ./StratosAuthDev:/app
         ports:
             - '6543:6543'
