--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,3 +10,26 @@ services:
             - ./StratosAuthDev:/app
         ports:
             - '6543:6543'
+
+    # Add stratos-db service for development environment
+    stratos-db:
+        build:
+            context: ./StratosDb
+            dockerfile: Dockerfile.dev
+        env_file:
+            - ./StratosDb/.env.dev
+        volumes:
+            - ./StratosDbDev:/app
+        ports:
+            - '6544:6544'
+
+    # Add pgadmin service for development environment
+    pgadmin:
+        image: dpage/pgadmin4:latest
+        environment:
+            PGADMIN_DEFAULT_EMAIL: admin@admin.com
+            PGADMIN_DEFAULT_PASSWORD: password
+        ports:
+            - '5050:80'
+        depends_on:
+            - db
