--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
 
     # Add redis service for all environments
     redis:
-        build:
-            context: ./redis
-            dockerfile: Dockerfile
+        image: redis:latest
+        ports:
+            - '6379:6379'
