--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,27 @@ services:
         build:
             context: ./db
             dockerfile: Dockerfile
+        env_file:
+            - ./.env.dev
+        environment:
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+        volumes:
+            - postgres-data:/var/lib/postgresql/data
+        ports:
+            - '5432:5432'
+        networks:
+            - backend
 
     # Add redis service for all environments
     redis:
         image: redis:latest
         ports:
             - '6379:6379'
+
+volumes:
+    postgres-data:
+
+networks:
+    backend:
